# BLS-Signatures

./: README.md
Ed25519/: Cargo.toml
Ed25519/src/: lib.rs  main.rs
Recent-eddsa/benches/: ed25519_benchmarks.rs
Recent-eddsa/src/: batch.rs
bls-signatures/: Cargo.toml
bls-signatures/examples/: aggregation_time.rs
bls-signatures/src/: key.rs  main.rs
