[package]
name = "bls-signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
rand_core = { version = "0.6.3", default-features = false }
rand = "0.8.5"
serde = {version = "1.0.106", features = ["derive"] }

# for ECIES
chacha20poly1305 = "0.9"
hkdf = "0.8"
sha2 = "0.8"

# bls12_377
ark-bls12-377 = { version = "0.3.0" }
# bls12_381
ark-bls12-381 = { version = "0.3.0" }
ark-serialize = { version = "0.3.0", features = [ "derive" ] }
ark-ff = { version = "0.3.0", features = [ "std" ] }
ark-ec = { version = "0.3.0", features = [ "std" ] }
bls-crypto = { git = "https://github.com/celo-org/bls-crypto" }
thiserror = "1.0.15"
bincode = "1.2.1"

[dev-dependencies]
static_assertions = "1.1.0"
proptest = "1.0.0"

[features]
# Enable parallel computation. Cannot be used with WASM.
parallel = ["ark-ec/parallel", "ark-ff/parallel", "bls-crypto/parallel"]
